--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <div class="modal">
                         <button class="modal-btn" data-modal-close>
                             <svg class="modal-icon" width="18" height="18">
-                              <use href="/images/icons.svg#icon-close-black-18dp-2-1"></use>
+                              <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
                             </svg>
                         </button>
                     </div>
